--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="row my-card justify-content-center">
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
-              <h1>Hi，这是我为喜欢的人做的网站</h1>
-              <p>"海压竹枝低复举，风吹山角晦还明"</p>
+              <h1>我喜欢你</h1>
+              <p>"如今你依旧是我的光"</p>
               
 				<br/>
 				
@@ -41,10 +41,10 @@
                 <ul class="social mt-1">
                     <li><a href="https://go.zikin.org/webo"><i class="fab fa-weibo " aria-hidden="true"></i></a></li>
                     <li><a href="https://go.zikin.org/mytg"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://go.zikin.org/twe2"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://go.zikin.org/twe2"><em class="fab fa-twitter" aria-hidden="true"></em></a></li>
                 </ul>
                 <footer>
-                    <p>© <a href="https://me.tangzhiqian.com" target="_blank">T. Chih-Ch'ien</a>
+                    <p>© <a href="https://me.tangzhiqian.com" target="_blank">Zikin</a>
 
                     </p>
                     </p>
